; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_mcg.c_mlx4_map_sw_to_hw_steering_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_mcg.c_mlx4_map_sw_to_hw_steering_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }

@MLX4_NET_TRANS_RULE_NUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Invalid network rule id. id = %d\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@__sw_id_hw = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_map_sw_to_hw_steering_id(%struct.mlx4_dev* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mlx4_dev*, align 8
  %5 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @MLX4_NET_TRANS_RULE_NUM, align 4
  %8 = icmp uge i32 %6, %7
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp ult i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %9, %2
  %13 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @mlx4_err(%struct.mlx4_dev* %13, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @EINVAL, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %3, align 4
  br label %24

18:                                               ; preds = %9
  %19 = load i32*, i32** @__sw_id_hw, align 8
  %20 = load i32, i32* %5, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %18, %12
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @mlx4_err(%struct.mlx4_dev*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
